[build-system]
requires = [
    "setuptools>=67.0.0",
    "wheel"

]
build-backend = "setuptools.build_meta"

[project]
name = "cnlunar"  # 你的项目名称（和 PyPI 上的包名一致）
version = "0.2.2"  # 项目版本号
license = { file = "LICENSE" }  # 推荐：关联项目根目录的 LICENSE 文件（GitHub 开源项目标配）
authors = [
  { name = "opn48", email = "cuba3@163.com" }  # 作者信息（可选）
]

description = "农历，中国农历历法项目，无需数据库环境，以《钦定协纪辨方书》为核心的python3 农历、黄历、二十四节气、节假日、星次、每日凶煞、每日值神、农历建除十二神、农历每日宜忌、彭祖百忌、每日五行、二十八星宿、天干地支、农历生辰八字、时辰凶吉等开源项目。"  # 填写你的项目实际功能描述，不能为空字符串
# 可选：更详细的项目长描述（通常对应 README.md，PyPI 上会展示）
readme = "README.md"
keywords = ["lunar", "chinese lunar",  "cnlunar",  "chinese-lunar-calendar",  "lunarcalendar", "calendar"]
[project.urls]
Homepage = "https://github.com/opn48/cnlunar"
# 可选：补充仓库地址（更完整，适配 PyPI 展示）
Repository = "https://github.com/opn48/cnlunar.git"
